tests/ui/nll/get_default.legacy.stderr
error[E0502]: cannot borrow `*map` as mutable because it is also borrowed as immutable
  --> $DIR/get_default.rs:35:17
   |
LL | fn err(map: &mut Map) -> &String {
   |             - let's call the lifetime of this reference `'1`
LL |     loop {
LL |         match map.get() {
   |               --- immutable borrow occurs here
LL |             Some(v) => {
LL |                 map.set(String::new()); // We always expect an error here.
   |                 ^^^^^^^^^^^^^^^^^^^^^^ mutable borrow occurs here
LL |
LL |                 return v;
   |                        - returning this value requires that `*map` is borrowed for `'1`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0502`.
